--- a/ensimWebApp/pom.xml
+++ b/ensimWebApp/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 
 	<dependencies>
+	
+	    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -27,6 +32,52 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+		  <groupId>org.thymeleaf</groupId>
+		  <artifactId>thymeleaf</artifactId>
+		  <version>3.0.11.RELEASE</version>
+ 		</dependency>
+ 		<dependency>
+		  <groupId>org.thymeleaf</groupId>
+		  <artifactId>thymeleaf-spring4</artifactId>
+		  <version>3.0.11.RELEASE</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>4.3.1</version>
+		</dependency>
+ 		
+ 		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>font-awesome</artifactId>
+		    <version>4.6.1</version>
+		</dependency>
+		
+	<dependency>
+	    <groupId>org.webjars.bower</groupId>
+	    <artifactId>nprogress</artifactId>
+	    <version>0.2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.webjars</groupId>
+	    <artifactId>jquery</artifactId>
+	    <version>2.2.3</version>
+   </dependency>
+   
+   <dependency>
+	    <groupId>org.webjars.bower</groupId>
+	    <artifactId>fastclick</artifactId>
+	    <version>1.0.6</version>
+  </dependency>
+  
+  <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>webjars-locator</artifactId>
+        <version>0.30</version>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
